opam-version: "2.0"
maintainer: "Hannes Mehnert <hannes@mehnert.org>"
authors: "Hannes Mehnert <hannes@mehnert.org>"
license: "BSD2"
homepage: "https://github.com/hannesm/conex"
doc: "https://hannesm.github.io/conex/doc"
bug-reports: "https://github.com/hannesm/conex/issues"
depends: [
  "ocaml" {>= "4.07.0"}
  "dune"
  "alcotest" {with-test}
  "cmdliner"
  "conex" {= version}
  "cstruct" {>= "1.6.0"}
  "mirage-crypto"
  "mirage-crypto-pk"
  "mirage-crypto-rng"
  "x509" {>= "0.7.0"}
  "logs"
  "fmt"
  "rresult"
  "base64" {>= "3.4.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/hannesm/conex.git"
synopsis: "Establishing trust in community repositories: crypto provided via mirage-crypto"
description: """
Conex is a system based on [TUF](https://theupdateframework.github.io/) to
establish trust in community repositories. Since opam2, the required hooks
are present.

This package uses the crypto primitives provided by mirage-crypto.
"""
