opam-version: "2.0"
maintainer: "Hannes Mehnert <hannes@mehnert.org>"
authors: "Hannes Mehnert <hannes@mehnert.org>"
license: "BSD2"
homepage: "https://github.com/hannesm/conex"
doc: "https://hannesm.github.io/conex/doc"
bug-reports: "https://github.com/hannesm/conex/issues"
depends: [
  "ocaml" {>= "4.05.0"}
  "dune"
  "alcotest" {with-test}
  "cmdliner"
  "conex" {= version}
  "cstruct" {>= "1.6.0"}
  "nocrypto" {>= "0.5.4"}
  "x509" {>= "0.7.0"}
  "logs"
  "fmt"
  "rresult"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/hannesm/conex.git"
synopsis: "Establishing trust in community repositories: crypto provided via nocrypto"
description: """
Conex is a system based on [TUF](https://theupdateframework.github.io/) to
establish trust in community repositories. Since opam2, the required hooks
are present.

This package uses the crypto primitives provided by nocrypto.
"""
