(library
  (name conex_cmd)
  (wrapped false)
  (modules conex_verify_app conex_opts)
  (libraries cmdliner conex conex.unix))

(executable
  (name conex_verify_openssl)
  (public_name conex_verify_openssl)
  (package conex)
  (modules conex_verify_openssl)
  (libraries cmdliner conex conex.openssl conex.unix conex_cmd))

(executable
  (name conex_verify_mirage_crypto)
  (public_name conex_verify_mirage_crypto)
  (package conex-mirage-crypto)
  (modules conex_verify_mirage_crypto)
  (libraries cmdliner conex conex-mirage-crypto conex.unix conex_cmd logs fmt logs.fmt fmt.tty logs.cli fmt.cli conex_cmd_mc))

(library
  (name conex_cmd_mc)
  (wrapped false)
  (modules conex_mc)
  (libraries conex-mirage-crypto conex.unix logs fmt ptime ptime.clock.os))

(executable
  (name conex_root)
  (public_name conex_root)
  (package conex-mirage-crypto)
  (modules conex_root)
  (libraries cmdliner conex conex-mirage-crypto conex.unix conex_cmd conex_cmd_mc logs fmt logs.fmt fmt.tty logs.cli fmt.cli mirage-crypto-rng.unix))

(executable
  (name conex_key)
  (public_name conex_key)
  (package conex-mirage-crypto)
  (modules conex_key)
  (libraries cmdliner conex conex-mirage-crypto conex.unix conex_cmd conex_cmd_mc logs fmt logs.fmt fmt.tty logs.cli fmt.cli mirage-crypto-rng.unix))

(executable
  (name conex_targets)
  (public_name conex_targets)
  (package conex-mirage-crypto)
  (modules conex_targets)
  (libraries cmdliner conex conex-mirage-crypto conex.unix conex_cmd conex_cmd_mc logs fmt logs.fmt fmt.tty logs.cli fmt.cli mirage-crypto-rng.unix))

(executable
  (name conex_timestamp)
  (public_name conex_timestamp)
  (package conex-mirage-crypto)
  (modules conex_timestamp)
  (libraries cmdliner conex conex-mirage-crypto conex.unix conex_cmd conex_cmd_mc logs fmt logs.fmt fmt.tty logs.cli fmt.cli mirage-crypto-rng.unix))

(executable
  (name conex_snapshot)
  (public_name conex_snapshot)
  (package conex-mirage-crypto)
  (modules conex_snapshot)
  (libraries cmdliner conex conex-mirage-crypto conex.unix conex_cmd conex_cmd_mc logs fmt logs.fmt fmt.tty logs.cli fmt.cli mirage-crypto-rng.unix))
